--- a/index.html
+++ b/index.html
@@ -6,53 +6,7 @@
 
 	<title>AkashJairam.com</title>
 
-	<style type="text/css">
-
-	.cchange {
-		background-color:yellow;
-		padding:25px;
-	}
-
-	.backchange{
-		background-color:blue;
-		padding: 25px;
-	}
-
-	body{
-		font-family: 'Oswald', sans-serif;
-		font-size: 20px;
-		padding:0;
-		margin:0;
-	}
-
-	h1{
-		background-color:#DD0A19;
-		padding:0;
-		margin:0;
-		text-align:center;
-	}
-
-	p{
-		padding:0;
-		margin:0;
-	}
-
-	a{
-		text-decoration:none;
-	}
-
-	a:hover{
-		text-decoration:underline;
-		color:green;
-	}
-
-	#projects{
-		text-decoration:underline;
-	}
-
-	</style>
-
-
+	<link rel="stylesheet" type="text/css" href="./Stylesheets/index.css">
 
 	</head>
 
